<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1"
        android:textColor="#ffffff"
        android:id="@+id/tv1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:id="@+id/join"
        android:width="150dp"
        android:layout_below="@+id/tv1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/create"
        android:width="150dp"
        android:layout_below="@+id/tv1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv2"
        android:textColor="#ffffff"
        android:id="@+id/tv2"
        android:visibility="gone"
        android:layout_below="@+id/join"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messenger"
        android:id="@+id/messenger"
        android:width="150dp"
        android:visibility="gone"
        android:layout_below="@+id/tv2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_call"
        android:id="@+id/phone_call"
        android:width="150dp"
        android:visibility="gone"
        android:layout_below="@+id/tv2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv3"
        android:textColor="#ffffff"
        android:id="@+id/tv3"
        android:visibility="gone"
        android:layout_below="@+id/messenger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ip"
        android:visibility="gone"
        android:inputType="phone"
        android:text="192.168.0.100"
        android:background="#ffffff"
        android:maxLength="15"
        android:maxLines="1"
        android:layout_below="@+id/tv3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/phone_call"
        android:layout_alignEnd="@+id/phone_call" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et"
        android:id="@+id/start"
        android:width="150dp"
        android:onClick="StartApp"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/ip"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create by Jakkot93"
        android:textColor="#ffffff"
        android:id="@+id/textView"
        android:layout_above="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Praca Inżynierska - zut.edu.pl"
        android:textColor="#ffffff"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
